--- a/src/HomePage/Stories.css
+++ b/src/HomePage/Stories.css
@@ -51,7 +51,7 @@ p {
 .card h1 {
   position: relative;
   padding: 190px 0px 100px 10px;
-  width: 90%;
+  width: 85%;
   font-size: 1.7rem;
 }
 
@@ -59,6 +59,7 @@ p {
   width: 90%;
   position: absolute;
   top: -6%;
+  height: 55%;
   left: -6%;
 }
 
