--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
-  overflow-x: hidden;
-
+  overflow-x: hidden !important;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
 
 .App-logo {
