--- a/src/HomePage/Stories.css
+++ b/src/HomePage/Stories.css
@@ -19,21 +19,21 @@ p {
 
 /* Cards */
 .card-column {
-  width: 50%;
+  width: 33%;
   float: left;
   padding: 6%;
   box-sizing: border-box;
 }
 
 .column-1 {
-  padding-top: 100px;
+  padding-top: 155px;
 }
 
 .card {
-  width: 80%;
+  width: 100%;
   max-width: 340px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   position: relative;
   background: #EB5160;
   color: #fff;
