--- a/src/HomePage/Stories.css
+++ b/src/HomePage/Stories.css
@@ -126,10 +126,11 @@ p {
 .close-content {
   display: block;
   position: absolute;
-  right: 12px;
+  right: 45px;
   top: 12px;
   width: 30px;
   height: 30px;
+  cursor: pointer;
 }
 
 .close-content span {
