--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -42,3 +42,22 @@
     font-weight: 600;
     color:#474545;
 }
+
+.contact-form{
+    background: transparent;
+    border: 2px solid #cdcdcd;
+    border-radius: 7px;
+    box-shadow: 0px 2px 2px 0.5px #d6cdcdab;
+}
+.contact-form-text h1{
+    font-size: 33 px;
+    text-align: start;
+}
+
+.contact-page-content{
+    font-size: 1.0625rem;
+    color:#595959;
+}
+.contact-page-card{
+    color:#0B07DC;
+}
