--- a/src/Stories/Header/header.css
+++ b/src/Stories/Header/header.css
@@ -6,20 +6,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Lora", serif;
     color: #444;
   }
   
   .headerTitleSm {
     position: absolute;
     top: 18%;
-    font-size: 20px;
+    font-size: 26px;
   }
   
   .headerTitleLg {
     position: absolute;
     top: 20%;
     font-size: 100px;
+    color: #474545;
   }
   
   .headerImg {
@@ -27,5 +27,6 @@
     height: 450px;
     margin-top: 80px;
     object-fit: cover;
+    border-radius: 6px;
   }
   
