--- a/src/Stories/sidebar/sidebar.css
+++ b/src/Stories/sidebar/sidebar.css
@@ -7,13 +7,19 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  
   align-items: center;
 }
-
+.sidebar1{
+  border: 2px solid #60606033;
+  padding: 15px 0;
+  border-radius: 4px;
+}
 .sidebarItem {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* border: 2px solid red; */
 }
 
 .sidebarTitle {
@@ -29,7 +35,9 @@
   color: #222222;
   font-weight: 600;
 }
-
+.chgedcolor{
+  color: #1b86be;
+}
 .sidebarItem > img {
   margin-top: 15px;
   width: 250px;
