--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -59,17 +59,44 @@
 
 /* Place Cards */
 .placesCard{
-  width: 30%;
-  height: 50vh;
+  width: 425px;
+  height: 55vh;
   border-radius: 10px;
+  margin: 25px 12px;
   background-color:white;
 }
 .placesCard .imgDetails img{
   width: 100%;
-  height: 36vh;
+  height: 43vh;
   border-radius: 10px;
+  filter: brightness(70%);
 }
 
+.placeCardsDetails{
+  padding: 0 15px;
+}
+
+.placeCardsDetails h3{
+  margin: 5px 0;
+  font-size: 20px;
+  font-weight: 700;
+  color: #474545;
+}
+.placeCardsDetails .placeInfo p{
+  margin: 0;
+  font-weight: 600;
+  color: #474545;
+}
 .placeCardsDetails .placeInfo .checked{
   color: orange;
+  font-size: 12px;
+  margin: 0 2px;
+  font-weight: 900;
+}
+
+.placeCardsDetails .placeInfo .placeCardRating{
+  font-size: 13px;
+}
+.placeCardsDetails .placeInfo .placeCardRating .numberOfReview{
+  font-weight: 200;
 }
