--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -93,7 +93,9 @@
   margin: 0 2px;
   font-weight: 900;
 }
-
+.placeCardsDetails .placeInfo .placesStarRating{
+  width: 90px;
+}
 .placeCardsDetails .placeInfo .placeCardRating{
   font-size: 13px;
 }
