--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -59,19 +59,50 @@
 
 /* Place Cards */
 .placesCard{
-  width: 425px;
-  height: 55vh;
+  width: 400px;
+  height: 51vh;
   border-radius: 10px;
-  margin: 25px 12px;
+  margin: 25px 25px;
   background-color:white;
 }
 .placesCard .imgDetails img{
   width: 100%;
-  height: 43vh;
+  height: 40vh;
   border-radius: 10px;
   filter: brightness(70%);
 }
-
+.placesCard .imgDetails{
+  position: relative;
+}
+.placesCard .imgDetails .imageContent .imgtext{
+  background-color: #757575b3;
+  position: absolute;
+  top: 2px;
+  width: 70%;
+  margin: 10px;
+  padding: 4px 3px 0 13px;
+  border-radius: 20px;
+  /* filter: blur(4px); */
+  /* backdrop-filter: blur(5px); */
+}
+.placesCard .imgDetails .imageContent h1{
+  font-size: 18px;
+  color: #e3e3e3;
+}
+.placesCard .imgDetails .savePlace{
+  background-color: #ffffffe2;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  width: 37px;
+  height: 37px;
+  margin: 10px;
+  padding: 4px 3px 0 13px;
+  border-radius: 50%;
+}
+.placesCard .imgDetails .savePlace i{
+  color: #ffa50096;
+}
 .placeCardsDetails{
   padding: 0 15px;
 }
@@ -100,5 +131,5 @@
   font-size: 13px;
 }
 .placeCardsDetails .placeInfo .placeCardRating .numberOfReview{
-  font-weight: 200;
+  font-weight: 400;
 }
