--- a/src/Places/DropDownNav.css
+++ b/src/Places/DropDownNav.css
@@ -1,27 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.sec__one {
-    position: relative;
-    width: 100%;
-    display: flex;
-    padding: 60px 0;
-}
-.sec__one h1{
-  text-align: center;
-  display: block;
-  margin: 0 auto;
-  color: #07a8ff;
-  font-family: 'Inter', sans-serif;
-}
-.navBar .logo img {
-  float: left;
-  max-height: 120px;
-}
 .is-active {
   color: #ff5800!important;
 }
@@ -34,7 +11,6 @@ ul.main-menu {
   list-style: none;
   margin: 0px auto 0;
   padding: 0;
-  float: right;
   z-index: 7;
 }
 ul.main-menu>li.menu-item:first-child {
@@ -48,25 +24,26 @@ li {
   list-style-type: none;
 }
 .menu-item a {
-  font-size: 20px;
   font-weight: 600;
   line-height: 40px;
   position: relative;
   display: block;
   color: #545050;
-  margin: 27px 17px;
+  margin: 10px 40px;
   text-decoration: none;
   cursor: pointer;
 }
 .header__middle__logo{
   width: 20%;
   display: inline-block;
-  float: left;
+  /* float: left; */
 }
 .header__middle__menus {
-  width: 70%;
+  width: 100%;
   display: inline-block;
   float: left;
+  background: #ffffff94;
+    box-shadow: #c6c1c1 4px 5px 6px 0px;
 }
 .menu-item.menu__qqqitem a{
   margin: 27px 10px;
@@ -81,7 +58,6 @@ li {
 .header__middle {
   display: flex;
   width: 100%;
-  float: left;
   border-bottom: 1px dashed lavender;
   position: relative;
 }
