--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -143,8 +143,9 @@
   margin: 10px;
   padding: 5px;
 }
-.clientCards .clientImg{
+.clientCards .clientImg img{
   /* height: 500px; */
+  width: 100%;
 }
 .clientCards .clientContent .clientName h3{
   font-size: 1.2rem;
