--- a/src/Places/PlacesInfo/PLacesInfo.css
+++ b/src/Places/PlacesInfo/PLacesInfo.css
@@ -1,19 +1,4 @@
-.demo {
-    width:450px;
-}
-ul {
-    list-style: none outside none;
-    padding-left: 0;
-    margin-bottom:0;
-}
-li {
-    display: block;
-    float: left;
-    margin-right: 6px;
-    cursor:pointer;
-}
-img {
-    display: block;
-    height: auto;
-    max-width: 100%;
+.placesInfo{
+    background-color: #e3e9ff;
+    height: 70vh;
 }
