--- a/src/LoginSignup/Login.css
+++ b/src/LoginSignup/Login.css
@@ -100,6 +100,7 @@ a {
 
 .container1.right-panel-active .sign-in-container1 {
 	transform: translateX(100%);
+	/* z-index: 0; */
 }
 
 .sign-up-container1 {
