--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -118,7 +118,7 @@
   font-weight: 600;
   color: #474545;
 }
-.placeCardsDetails .placeInfo .checked{
+ .checked{
   color: orange;
   font-size: 12px;
   margin: 0 2px;
@@ -154,4 +154,75 @@
 
 .clientCards .clientContent .clientReview{
   font-size: .7rem;
+}
+
+.nearbyCard{
+  display : flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 16px;
+  border-bottom: 1px solid grey;
+  margin: 5px 0;
+  /* height: 100px; */
+}
+
+.subdiv1{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  height: 100%;
+}
+
+.nearImg{
+  border-radius: 12px;
+}
+
+.nearPara1{
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.nearImg{
+  width: 90px !important;
+  height: 60px !important;
+  object-fit: cover;
+  margin: auto;
+}
+
+.nearPara2{
+  font-size: 12px;
+  color: #5d5d5d;
+  font-weight: 600;
+}
+.nearCardsReviews p{
+  font-weight: 600;
+  color: #5c5b5b;
+}
+
+.reviewCards .reviewPersonDetails .reviewPersonImage{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.reviewCards .reviewPersonDetails .reviewPersonName h2{
+  font-size: 16px;
+  font-weight: 500;
+  color: #474545;
+}
+
+.reviewCards .reviewPersonDetails .reviewPersonName p{
+  font-size: 12px;
+  font-weight: 500;
+  color: #9d9d9d;
+}
+
+.reviewCards .comments{
+  font-size: 12px;
+  font-weight: 500;
+  color: #9d9d9d;
+}
+.reviewCards{
+  border-bottom: 1px solid #9d9d9d;
+  padding-bottom: 25px;
 }
