--- a/src/LoginSignup/Login.css
+++ b/src/LoginSignup/Login.css
@@ -99,7 +99,7 @@ a {
 }
 
 .container1.right-panel-active .sign-in-container1 {
-	transform: translateX(100%);
+	transform: translateX(-100%);
 	/* z-index: 0; */
 }
 
@@ -115,6 +115,8 @@ a {
 	opacity: 1;
 	z-index: 5;
 	animation: show 0.6s;
+	text-align: center;
+	align-items: center;
 }
 
 @keyframes show {
