--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -6,6 +6,8 @@
   background-color: #68d3e81f;
   border-radius: 1rem;
   transition: 0.3s ease-in-out;
+  width: 380px;
+  margin: 25px 0;
 }
 .destination img {
   width: 100%;
@@ -55,25 +57,35 @@
   top: 0px;
 }
 
+@media (max-width: 986px) {
+  .destination {
+    width: 290px;
+  }
+}
 
+@media (max-width: 776px) {
+  .destination {
+    width: 3800px;
+  }
+}
 /* Place Cards */
-.placesCard{
+.placesCard {
   width: 400px;
   height: 51vh;
   border-radius: 10px;
   margin: 25px 25px;
-  background-color:white;
+  background-color: white;
 }
-.placesCard .imgDetails img{
+.placesCard .imgDetails img {
   width: 100%;
   height: 40vh;
   border-radius: 10px;
   filter: brightness(70%);
 }
-.placesCard .imgDetails{
+.placesCard .imgDetails {
   position: relative;
 }
-.placesCard .imgDetails .imageContent .imgtext{
+.placesCard .imgDetails .imageContent .imgtext {
   background-color: #757575b3;
   position: absolute;
   top: 2px;
@@ -84,11 +96,11 @@
   /* filter: blur(4px); */
   /* backdrop-filter: blur(5px); */
 }
-.placesCard .imgDetails .imageContent h1{
+.placesCard .imgDetails .imageContent h1 {
   font-size: 18px;
   color: #e3e3e3;
 }
-.placesCard .imgDetails .savePlace{
+.placesCard .imgDetails .savePlace {
   background-color: #ffffffe2;
   position: absolute;
   top: 2px;
@@ -99,64 +111,64 @@
   padding: 4px 3px 0 13px;
   border-radius: 50%;
 }
-.placesCard .imgDetails .savePlace i{
+.placesCard .imgDetails .savePlace i {
   color: #ffa50096;
 }
-.placeCardsDetails{
+.placeCardsDetails {
   padding: 0 15px;
 }
 
-.placeCardsDetails h3{
+.placeCardsDetails h3 {
   margin: 5px 0;
   font-size: 20px;
   font-weight: 700;
   color: #474545;
 }
-.placeCardsDetails .placeInfo p{
+.placeCardsDetails .placeInfo p {
   margin: 0;
   font-weight: 600;
   color: #474545;
 }
- .checked{
+.checked {
   color: orange;
   font-size: 12px;
   margin: 0 2px;
   font-weight: 900;
 }
-.placeCardsDetails .placeInfo .placesStarRating{
+.placeCardsDetails .placeInfo .placesStarRating {
   width: 90px;
 }
-.placeCardsDetails .placeInfo .placeCardRating{
+.placeCardsDetails .placeInfo .placeCardRating {
   font-size: 13px;
 }
-.placeCardsDetails .placeInfo .placeCardRating .numberOfReview{
+.placeCardsDetails .placeInfo .placeCardRating .numberOfReview {
   font-weight: 400;
 }
 
 /* Clients Cards */
 
-.clientCards{
+.clientCards {
   height: 45vh;
   width: 85%;
   background-color: #d6d8d94f;
   margin: 10px;
   padding: 5px;
 }
-.clientCards .clientImg img{
+.clientCards .clientImg img {
   /* height: 500px; */
   width: 100%;
 }
-.clientCards .clientContent .clientName h3{
+.clientCards .clientContent .clientName h3 {
   font-size: 1.2rem;
   color: #dc3545;
 }
 
-.clientCards .clientContent .clientReview{
-  font-size: .7rem;
+.clientCards .clientContent .clientReview {
+  font-size: 0.7rem;
 }
 
-.nearbyCard{
-  display : flex;
+.nearbyCard {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 16px;
@@ -165,63 +177,93 @@
   /* height: 100px; */
 }
 
-.subdiv1{
+.subdiv1 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   height: 100%;
 }
 
-.nearImg{
+.nearImg {
   border-radius: 12px;
 }
 
-.nearPara1{
+.nearPara1 {
   font-weight: 500;
   font-size: 14px;
 }
 
-.nearImg{
+.nearImg {
   width: 90px !important;
   height: 60px !important;
   object-fit: cover;
   margin: auto;
 }
 
-.nearPara2{
+.nearPara2 {
   font-size: 12px;
   color: #5d5d5d;
   font-weight: 600;
 }
-.nearCardsReviews p{
+.nearCardsReviews p {
   font-weight: 600;
   color: #5c5b5b;
 }
 
-.reviewCards .reviewPersonDetails .reviewPersonImage{
+.reviewCards .reviewPersonDetails .reviewPersonImage {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
 
-.reviewCards .reviewPersonDetails .reviewPersonName h2{
+.reviewCards .reviewPersonDetails .reviewPersonName h2 {
   font-size: 16px;
   font-weight: 500;
   color: #474545;
 }
 
-.reviewCards .reviewPersonDetails .reviewPersonName p{
+.reviewCards .reviewPersonDetails .reviewPersonName p {
   font-size: 12px;
   font-weight: 500;
   color: #9d9d9d;
 }
 
-.reviewCards .comments{
+.reviewCards .comments {
   font-size: 12px;
   font-weight: 500;
   color: #9d9d9d;
 }
-.reviewCards{
+.reviewCards {
   border-bottom: 1px solid #9d9d9d;
   padding-bottom: 25px;
+}
+
+.dashBoardcard {
+  width: 250px;
+  height: 170px;
+  background-color: white;
+  border-radius: 5px;
+  border: 0.5px solid #8080804d;
+}
+.dashBoardcard .dashboardDetails h1 {
+  font-size: 24px;
+  color: #2d2d2d;
+}
+.dashBoardcard .dashboardDetails {
+  width: 100%;
+}
+.dashBoardcard .dashboardDetails .dashBoarddata {
+  position: relative;
+  padding-bottom: 15px;
+}
+.dashBoardcard .dashboardDetails .dashBoarddata::after {
+  content: "";
+  width: 50%;
+  height: 5px;
+  background-color: #52e707;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
 }
