--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -6,6 +6,7 @@
 }
 .herobgImage{
     height: 65vh;
+    width: 93vw;
 }
 .herobgImage img{
     width: 100%;
@@ -14,15 +15,16 @@
 
 .home .content{
     height: 100%;
-    width: 100%;
+    width:93vw;
     z-index: 5;
     display: flex;
-    right: 0;
-    left: 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute !important;
     top: 0;
     color: rgb(255, 255, 255);
+}
+.home .content h1{
+    font-size: 2.3rem;
 }
