--- a/src/AddPlaces/AddPlaces.css
+++ b/src/AddPlaces/AddPlaces.css
@@ -3,6 +3,9 @@
 }
 .addplaces .addPlaceHeading{
     color: #474545;
+    border: 2px solid #1b86be73;
+    border-radius: 40px;
+    padding: 10px 25px;
 }
 .addplaces .formfield{
     padding: 35px;
