--- a/src/AddPlaces/addInfo.css
+++ b/src/AddPlaces/addInfo.css
@@ -1,10 +1,10 @@
 
 .addPlaceHeading{
     color: #474545;
-    
     border-radius: 40px;
     border: none;
     padding: 10px 25px;
+    cursor: pointer;
 }
 .placeActive{
     border: 2px solid #1b86be73;
