--- a/src/Places/PlacesInfo/PlacesInfoHero.css
+++ b/src/Places/PlacesInfo/PlacesInfoHero.css
@@ -1,8 +1,11 @@
 .placesInfoHero{
-    height: 30vh;
+    /* height: 30vh; */
     padding: 50px 0px;
 }
 .carousel{
+    height: 50vh;
+}
+.carousel-main{
     height: 50vh;
 }
 .react-3d-carousel{
