--- a/src/assets/Components/comments/Comment.css
+++ b/src/assets/Components/comments/Comment.css
@@ -20,17 +20,26 @@
     height: 80px;
     margin-bottom: 8px;
     margin-top: 8px;
-    border: 1px solid rgb(107, 114, 12);
+    border: none;
+    border-bottom: 1px solid rgb(107, 114, 12);
   }
   
   .comment-form-button {
     font-size: 16px;
-    padding: 8px 16px;
-    background: rgb(59, 130, 246);
-    border-radius: 8px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    border-radius: 15px;
+    border: none;
     color: white;
+    background-color: #48cae4;
   }
-  
+  .comment-form-button:hover{
+    color: #48cae4;
+    background-color: white;
+    border: 1px solid #48cae4;
+    box-sizing: border-box;
+  }
+
   .comment-form-button:hover:enabled {
     cursor: pointer;
     background: rgb(37, 99, 235);
@@ -56,6 +65,7 @@
   
   .comment-image-container img {
     border-radius: 50px;
+    height: 40px;
   }
   
   .comment-right-part {
